fix color contrast issues

--- a/project/styles/loopy.css
+++ b/project/styles/loopy.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-bg: #f96939;
-    --primary-fg: #fef0eb;
+    --primary-bg: #CA3607;
+    --primary-fg: #FFFBFA;
 
     --background: #fef0eb;
     --white: #fff;
